# VideoSDK

./: App.tsx  OpenCVCameraView.tsx  README.md  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/videosdk/: MainActivity.kt  MainApplication.kt  OpenCVCameraPackage.java  OpenCVCameraViewManager.java
android/videosdk-native/: build.gradle
android/videosdk-native/src/main/: AndroidManifest.xml
android/videosdk-native/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ios/: Podfile
ios/VideoSDK/: AppDelegate.swift  CameraPermissionModule.m  Info.plist  LaunchScreen.storyboard  OpenCVCameraView.h  OpenCVCameraView.mm  OpenCVCameraViewManager.m
ios/VideoSDK.xcodeproj/: project.pbxproj
ios/VideoSDK.xcodeproj/xcshareddata/xcschemes/: VideoSDK.xcscheme
